--- a/css/Home.css
+++ b/css/Home.css
@@ -14,3 +14,14 @@ header > nav .container-fluid .middle a{
    display: table-cell;
    padding: 16px 8px;
 }
+.header_container{
+    margin-top: 60px ;
+}
+/* .row{
+    justify-content: space-around;
+} */
+.card {
+    border-radius: 0%;
+    margin-bottom: 20px;
+    /* margin-right: 20px; */
+}
