--- a/css/Home.css
+++ b/css/Home.css
@@ -1,7 +1,6 @@
 header {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 
@@ -17,18 +16,7 @@ header > nav .container-fluid .middle a{
    padding: 16px 8px;
 }
 
-header > nav .container-fluid .middle span.circle::before{
-    top: 4px;
-    left: 8px;
-    width: 24px;
-    height: 24px;
-    content: "";
-    z-index: 0;
-    position: absolute;
-    border-radius: 50%;
-    background-color: rgb(134 243 255 / 30%);
-}
-    .header_container{
+.header_container{
     margin-top: 60px ;
 }
  
@@ -64,25 +52,18 @@ header > nav .container-fluid .middle span.circle::before{
 {
     padding-top: 20px ;
     margin-left: 20px;
-<<<<<<< HEAD
+
 }
 
-<<<<<<< HEAD
-}
-=======
 /* css footer  */
 
   
-  header {
-    width: 90%;
-    max-width: 1240px;
-    margin: 0 auto;
-  }
+
+  
   .band {
     width: 90%;
     max-width: 1240px;
     margin: 0 auto;
-    
     display: grid;
     
     grid-template-columns: 1fr;
@@ -111,8 +92,8 @@ header > nav .container-fluid .middle span.circle::before{
     position: relative;
     top: 0;
     transition: all .1s ease-in;
-      
-    &:hover {
+  }
+    :hover {
       top: -2px;
       box-shadow: 0 4px 5px rgba(0,0,0,0.2);
     }
@@ -151,7 +132,7 @@ header > nav .container-fluid .middle span.circle::before{
       background-size: cover;
       background-position: center center;
     }
-  }
+  
   
   .item-1 {
     @media (min-width: 60em) {
@@ -162,8 +143,3 @@ header > nav .container-fluid .middle span.circle::before{
       }
     }
   }
-=======
-
-}
->>>>>>> 469b6c819f786b62a6be610eb7a857ee43ddbf81
->>>>>>> f3ab8aa385542398af2c8f803a74e07f830be5a7
