--- a/css/Home.css
+++ b/css/Home.css
@@ -1,15 +1,11 @@
 
-    .header_container{
-    margin-top: 60px ;
-}
- 
-
+/*
 .content_item{
     padding-left: 10px;
     padding-right: 10px;
     box-sizing: border-box;
 }
-.bg-light .container .row .content_item{
+.bg-light .container-sm .row .content_item{
     padding: 8px;
 }
 .content_item .card img{
@@ -24,145 +20,20 @@
     background-size: 800px;
     background-position: right top;
 }
-.bg-light .container_fluid{
+.bg-light .container-sm{
     padding-left: 50px;
     padding-right: 50px;
 }
-.container_fluid .row{
+.container-sm .row{
     margin-top: 17px;
     border-radius: 4px;  
 
 }
-.bg-light .container-fluid .text 
+.bg-light .container-sm .text 
 {
     padding-top: 20px ;
     margin-left: 20px;
 }
 
-
-/* css nút bấm  */
-
-.button {
-  margin: auto;
-  border-radius: 20px;
-  top: 10px;
-  
-
-}
-
-HEAD .image {
-  width: inherit;
-}
-
-
-
-  
-header {
-    width: 90%;
-    max-width: 1240px;
-    margin: 0 auto;
-  }
-
-
-  
-.band {
-
-    width: 90%;
-    max-width: 1240px;
-    margin: 0 auto;
-    display: grid;
-    
-    grid-template-columns: 1fr;
-    grid-template-rows: auto;
-    grid-gap: 20px;
-    
-    @media (min-width: 30em) {
-      grid-template-columns: 1fr 1fr;
-    }
-    
-    @media (min-width: 60em) {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
-  
- .card {
-    background: white;
-    text-decoration: none;
-    color: #444;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    display: flex;
-    flex-direction: column;
-    min-height: 100%;
-    
-    /* // sets up hover state */
-    position: relative;
-    top: 0;
-    transition: all .1s ease-in;
-  }
-    :hover {
-      top: -2px;
-      box-shadow : 0 4px 5px rgba(0,0,0,0.2);
-    }
-    
-    article {
-      padding: 20px;
-      flex: 1;
-      
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    
-    h1 {
-      font-size: 20px;
-      margin: 0;
-      color: #333;
-    }
-    
-    p {
-      flex: 1;
-      line-height: 1.4;
-    }
-    
-    span {
-      font-size: 12px;
-      font-weight: bold;
-      color: #999;
-      text-transform: uppercase;
-      letter-spacing: .05em;
-      margin: 2em 0 0 0;
-    }
-    
-    .thumb {
-      padding-bottom: 60%;
-      background-size: cover;
-      background-position: center center;
-    }
-
-  .item-1 {
-    @media (min-width: 60em) {
-      grid-column: 1 / span 2;
-      
-      h1 {
-        font-size: 24px;
-      }
-    }
-  }
-
-
-/* hotel-detail */
-.main .row .right .button_right{
-  display: flex;
-  justify-content:space-between;
-  border-radius: 10px;
-}
-.footer_container .footer_container .content_item {
-  padding: 8px;
-}
-.footer_container .footer_container .content_item .img {
-    height: 154px;
-}
-.footer_container .footer_container .content_item .card-body{
-    height: 191px;
-}
+*/
 
