update text and search bar

--- a/css/hotel_detail.css
+++ b/css/hotel_detail.css
@@ -66,3 +66,26 @@
     
     
 }
+
+.anhslide {
+    height: 70%;
+    width: 100%;
+    padding: 0px 4px;
+}
+
+.btntimkiem {
+    margin-top: 28px;
+    height: 50px;
+    width: 200px;
+    
+}
+button.btn.btn-warning.text-white.btntimkiem {
+    border-radius: 50px;
+}
+hr:hover {
+    color: black;
+    
+}
+hr:not([size]) {
+    height: 3px;
+}
