--- a/css/hotel_detail.css
+++ b/css/hotel_detail.css
@@ -31,6 +31,7 @@
 .carditem hr{
     margin: 0;
     margin-bottom: 8px;
+    width: 100%;
 }
 .select-option{
     display: flex;
@@ -47,11 +48,6 @@
     background-color: #24a8d8;
 
 }
-.form-select.border-0{
-    color: #fff;
-    background-color: #24a8d8;
-}
-
 .carditem{
     padding: 8px;
 }
@@ -63,6 +59,5 @@
     color: #fff;
     background-color: orange;
     border-radius: 30px;
-    
     
 }
